--- a/myvol/workdir/package.json
+++ b/myvol/workdir/package.json
@@ -15,6 +15,9 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11"
+    "pg": "^8.1.0",
+    "pug": "2.0.0-beta11",
+    "sequelize": "^5.21.7",
+    "uuid": "^8.0.0"
   }
 }
