--- a/myvol/workdir/package.json
+++ b/myvol/workdir/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.17.1",
     "helmet": "^3.22.0",
     "http-errors": "~1.6.3",
+    "jquery": "3.4.1",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -19,5 +20,12 @@
     "pug": "2.0.0-beta11",
     "sequelize": "^5.21.7",
     "uuid": "^8.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.1.6",
+    "@babel/preset-env": "7.1.6",
+    "babel-loader": "8.0.4",
+    "webpack": "4.26.1",
+    "webpack-cli": "3.1.2"
   }
 }
