--- a/myvol/workdir/package.json
+++ b/myvol/workdir/package.json
@@ -7,25 +7,25 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "debug": "~4.1.1",
+    "express": "~4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^3.22.0",
-    "http-errors": "~1.6.3",
-    "jquery": "3.5.0",
-    "morgan": "~1.9.1",
+    "http-errors": "~1.7.3",
+    "jquery": "3.5.1",
+    "morgan": "~1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.1.0",
-    "pug": "2.0.0-beta11",
-    "sequelize": "^5.21.7",
+    "pg": "^8.2.0",
+    "pug": "2.0.4",
+    "sequelize": "^5.21.8",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.1.6",
-    "@babel/preset-env": "7.1.6",
-    "babel-loader": "8.0.4",
-    "webpack": "4.26.1",
-    "webpack-cli": "3.1.2"
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "babel-loader": "8.1.0",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.11"
   }
 }
