--- a/myvol/workdir/package.json
+++ b/myvol/workdir/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "cookie-parser": "~1.4.4",
     "debug": "~4.1.1",
     "express": "~4.17.1",
@@ -17,6 +18,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.2.0",
+    "popper.js": "^1.16.1",
     "pug": "2.0.4",
     "sequelize": "^5.21.8",
     "uuid": "^8.0.0"
