--- a/myvol/workdir/package.json
+++ b/myvol/workdir/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "cookie-parser": "~1.4.4",
+    "csurf": "^1.11.0",
     "debug": "~4.1.1",
     "express": "~4.17.1",
     "express-session": "^1.17.1",
@@ -29,5 +30,8 @@
     "babel-loader": "8.1.0",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11"
+  },
+  "engines": {
+    "node": "~10"
   }
 }
