--- a/myvol/workdir/package.json
+++ b/myvol/workdir/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "passport-stub": "^1.1.1",
     "pg": "^8.2.0",
     "popper.js": "^1.16.1",
     "pug": "2.0.4",
@@ -28,6 +29,8 @@
     "@babel/core": "7.9.6",
     "@babel/preset-env": "7.9.6",
     "babel-loader": "8.1.0",
+    "jest": "25.1.0",
+    "supertest": "3.1.0",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11"
   },
