--- a/myvol/workdir/package.json
+++ b/myvol/workdir/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "npx jest --testTimeout=10000 --forceExit"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
